@@ -8,7 +8,6 @@ package org.elasticsearch.xpack.analytics.movingPercentiles;
 
 import org.HdrHistogram.DoubleHistogram;
 import org.elasticsearch.search.DocValueFormat;
-import org.elasticsearch.search.aggregations.AggregationExecutionException;
 import org.elasticsearch.search.aggregations.AggregationReduceContext;
 import org.elasticsearch.search.aggregations.InternalAggregation;
 import org.elasticsearch.search.aggregations.InternalAggregations;
@@ -55,7 +54,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         switch (config.method) {
             case TDIGEST -> reduceTDigest(buckets, histo, newBuckets, factory, config);
             case HDR -> reduceHDR(buckets, histo, newBuckets, factory, config);
-            default -> throw new AggregationExecutionException(
+            default -> throw new IllegalArgumentException(
                 AbstractPipelineAggregationBuilder.BUCKETS_PATH_FIELD.getPreferredName()
                     + " references an unknown percentile aggregation method: ["
                     + config.method
@@ -76,7 +75,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         List<TDigestState> values = buckets.stream()
             .map(b -> resolveTDigestBucketValue(histo, b, bucketsPaths()[0]))
             .filter(v -> v != null)
-            .collect(Collectors.toList());
+            .toList();
 
         int index = 0;
         for (InternalMultiBucketAggregation.InternalBucket bucket : buckets) {
@@ -126,7 +125,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         List<DoubleHistogram> values = buckets.stream()
             .map(b -> resolveHDRBucketValue(histo, b, bucketsPaths()[0]))
             .filter(v -> v != null)
-            .collect(Collectors.toList());
+            .toList();
 
         int index = 0;
         for (InternalMultiBucketAggregation.InternalBucket bucket : buckets) {
@@ -165,7 +164,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         }
     }
 
-    private PercentileConfig resolvePercentileConfig(
+    private static PercentileConfig resolvePercentileConfig(
         MultiBucketsAggregation agg,
         InternalMultiBucketAggregation.InternalBucket bucket,
         String aggPath
@@ -195,7 +194,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         throw buildResolveError(agg, aggPathsList, propertyValue, "percentiles");
     }
 
-    private TDigestState resolveTDigestBucketValue(
+    private static TDigestState resolveTDigestBucketValue(
         MultiBucketsAggregation agg,
         InternalMultiBucketAggregation.InternalBucket bucket,
         String aggPath
@@ -208,7 +207,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         return ((InternalTDigestPercentiles) propertyValue).getState();
     }
 
-    private DoubleHistogram resolveHDRBucketValue(
+    private static DoubleHistogram resolveHDRBucketValue(
         MultiBucketsAggregation agg,
         InternalMultiBucketAggregation.InternalBucket bucket,
         String aggPath
@@ -221,7 +220,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         return ((InternalHDRPercentiles) propertyValue).getState();
     }
 
-    private IllegalArgumentException buildResolveError(
+    private static IllegalArgumentException buildResolveError(
         MultiBucketsAggregation agg,
         List<String> aggPathsList,
         Object propertyValue,
@@ -254,7 +253,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         }
     }
 
-    private int clamp(int index, int length) {
+    private static int clamp(int index, int length) {
         if (index < 0) {
             return 0;
         }
