@@ -32,7 +32,6 @@ import org.elasticsearch.client.Response;
 import org.elasticsearch.client.ResponseException;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.bytes.BytesReference;
-import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.common.io.Streams;
 import org.elasticsearch.common.settings.SecureString;
 import org.elasticsearch.common.settings.Settings;
@@ -40,6 +39,9 @@ import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.core.CheckedFunction;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.core.Tuple;
+import org.elasticsearch.test.cluster.ElasticsearchCluster;
+import org.elasticsearch.test.cluster.local.distribution.DistributionType;
+import org.elasticsearch.test.cluster.util.resource.Resource;
 import org.elasticsearch.test.rest.ESRestTestCase;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentFactory;
@@ -49,6 +51,7 @@ import org.elasticsearch.xpack.core.security.authc.support.UsernamePasswordToken
 import org.elasticsearch.xpack.core.ssl.CertParsingUtils;
 import org.hamcrest.Matchers;
 import org.junit.Before;
+import org.junit.ClassRule;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -67,6 +70,7 @@ import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509ExtendedTrustManager;
 
+import static java.util.Map.entry;
 import static org.elasticsearch.common.xcontent.XContentHelper.convertToMap;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.equalTo;
@@ -82,6 +86,61 @@ public class SamlAuthenticationIT extends ESRestTestCase {
 
     private static final String SAML_RESPONSE_FIELD = "SAMLResponse";
     private static final String KIBANA_PASSWORD = "K1b@na K1b@na K1b@na";
+
+    @ClassRule
+    public static ElasticsearchCluster cluster = ElasticsearchCluster.local()
+        .distribution(DistributionType.DEFAULT)
+        .setting("xpack.license.self_generated.type", "trial")
+        .setting("xpack.security.enabled", "true")
+        .setting("xpack.security.http.ssl.enabled", "false")
+        .setting("xpack.security.authc.token.enabled", "true")
+        .setting("xpack.security.authc.realms.file.file.order", "0")
+        // SAML realm 1 (no authorization_realms)
+        .setting("xpack.security.authc.realms.saml.shibboleth.order", "1")
+        .setting("xpack.security.authc.realms.saml.shibboleth.idp.entity_id", "https://test.shibboleth.elastic.local/")
+        .setting("xpack.security.authc.realms.saml.shibboleth.idp.metadata.path", "idp-metadata.xml")
+        .setting("xpack.security.authc.realms.saml.shibboleth.sp.entity_id", "http://mock1.http.elastic.local/")
+        // The port in the ACS URL is fake - the test will bind the mock webserver
+        // to a random port and then whenever it needs to connect to a URL on the
+        // mock webserver it will replace 54321 with the real port
+        .setting("xpack.security.authc.realms.saml.shibboleth.sp.acs", "http://localhost:54321/saml/acs1")
+        .setting("xpack.security.authc.realms.saml.shibboleth.attributes.principal", "uid")
+        .setting("xpack.security.authc.realms.saml.shibboleth.attributes.name", "urn:oid:2.5.4.3")
+        .setting("xpack.security.authc.realms.saml.shibboleth.signing.key", "sp-signing.key")
+        .setting("xpack.security.authc.realms.saml.shibboleth.signing.certificate", "sp-signing.crt")
+        // SAML realm 2 (uses authorization_realms)
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.order", "2")
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.idp.entity_id", "https://test.shibboleth.elastic.local/")
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.idp.metadata.path", "idp-metadata.xml")
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.sp.entity_id", "http://mock2.http.elastic.local/")
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.sp.acs", "http://localhost:54321/saml/acs2")
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.attributes.principal", "uid")
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.authorization_realms", "native")
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.signing.key", "sp-signing.key")
+        .setting("xpack.security.authc.realms.saml.shibboleth_native.signing.certificate", "sp-signing.crt")
+        // SAML realm 3 (used for negative tests with multiple realms)
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.order", "3")
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.idp.entity_id", "https://test.shibboleth.elastic.local/")
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.idp.metadata.path", "idp-metadata.xml")
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.sp.entity_id", "somethingwronghere")
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.sp.acs", "http://localhost:54321/saml/acs3")
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.attributes.principal", "uid")
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.authorization_realms", "native")
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.signing.key", "sp-signing.key")
+        .setting("xpack.security.authc.realms.saml.shibboleth_negative.signing.certificate", "sp-signing.crt")
+        .setting("xpack.security.authc.realms.native.native.order", "4")
+        .setting("xpack.ml.enabled", "false")
+        .setting("logger.org.elasticsearch.xpack.security", "TRACE")
+        .configFile("sp-signing.key", Resource.fromClasspath("sp-signing.key"))
+        .configFile("idp-metadata.xml", Resource.fromClasspath("idp-metadata.xml"))
+        .configFile("sp-signing.crt", Resource.fromClasspath("sp-signing.crt"))
+        .user("test_admin", "x-pack-test-password")
+        .build();
+
+    @Override
+    protected String getTestRestCluster() {
+        return cluster.getHttpAddresses();
+    }
 
     @Override
     protected Settings restAdminSettings() {
@@ -140,12 +199,12 @@ public class SamlAuthenticationIT extends ESRestTestCase {
      */
     @Before
     public void setupNativeUser() throws IOException {
-        final Map<String, Object> body = MapBuilder.<String, Object>newMapBuilder()
-            .put("roles", Collections.singletonList("kibana_admin"))
-            .put("full_name", "Thor Son of Odin")
-            .put("password", randomAlphaOfLengthBetween(inFipsJvm() ? 14 : 8, 16))
-            .put("metadata", Collections.singletonMap("is_native", true))
-            .map();
+        final Map<String, Object> body = Map.ofEntries(
+            entry("roles", Collections.singletonList("kibana_admin")),
+            entry("full_name", "Thor Son of Odin"),
+            entry("password", randomAlphaOfLengthBetween(inFipsJvm() ? 14 : 8, 16)),
+            entry("metadata", Collections.singletonMap("is_native", true))
+        );
         final Response response = adminClient().performRequest(buildRequest("PUT", "/_security/user/thor", body));
         assertOK(response);
     }
